--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-galigeo",
   "version": "0.1.0",
-  "description": "",
+  "description": "NPM package for galigeo n8n nodes",
   "keywords": [
     "n8n-community-node-package"
   ],
   "license": "MIT",
   "homepage": "",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Jules Pierrat",
+    "email": "jpierrat@galigeo.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/Galigeo/n8n-nodes-galigeo.git"
   },
   "engines": {
     "node": ">=20.15"
